--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+
+node_modules/
+bower_components/
